# static-resource

./: .gitignore  Dockerfile  LICENSE  Makefile  NOTICE  README.md  stack.yaml  static-resource.cabal
src/: Main.hs
