name:           static-resource
version:        0.1.0.0
homepage:       https://github.com/ktchen14/static-resource
bug-reports:    https://github.com/ktchen14/static-resource/issues
license:        MIT
license-file:   LICENSE
author:         Kaiting Chen
maintainer:     kaitingc@vmware.com
copyright:      Copyright (c) 2020 VMware, Inc.
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

executable static-resource
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , aeson-pretty
    , base16-bytestring
    , bytestring
    , cryptohash-sha1
    , directory
    , filepath
    , hashable
    , text
    , unordered-containers
    , vector
  default-language: Haskell2010
